--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 /* ===== Estructura General ===== */
 body {
-  background: #edecec;
+  background: #090909;
   color: #402f2f;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@ body {
 #global-content {
   background: #92dbe2;
   padding: 25px 30px;
-  border-radius: 15px;
+  border-radius: 35px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   width: 100%;
   max-width: 500px;
@@ -30,7 +30,7 @@ h1 {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 10px;
-  color: #273c75;
+  color: #430953;
 }
 
 h2 {
