Agregue la funcionalidad de modo dia y modo noche

--- a/css/styles-dia.css
+++ b/css/styles-dia.css
@@ -8,7 +8,7 @@
 
 /* ===== Estructura General ===== */
 body {
-  background: #090909;
+  background: white;
   color: #402f2f;
   display: flex;
   justify-content: center;
